
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static double KernelBessel_P1(const double x)
{
 double p, q;

 register long i;

 static const double
 Pone[] =
 {
  0.352246649133679798341724373e+5,
  0.62758845247161281269005675e+5,
  0.313539631109159574238669888e+5,
  0.49854832060594338434500455e+4,
  0.2111529182853962382105718e+3,
  0.12571716929145341558495e+1
 },
 Qone[] =
 {
  0.352246649133679798068390431e+5,
  0.626943469593560511888833731e+5,
  0.312404063819041039923015703e+5,
  0.4930396490181088979386097e+4,
  0.2030775189134759322293574e+3,
  0.1e+1
 };

 p = Pone[5];
 q = Qone[5];
 for (i=4; i >= 0; i--)
 {
  p = p*(8.0/x)*(8.0/x)+Pone[i];
  q = q*(8.0/x)*(8.0/x)+Qone[i];
 }
 return (double)(p/q);
}
